--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^4.2.0
   firebase_storage: ^11.0.7
   cloud_firestore: ^4.2.0
+  google_sign_in: ^5.4.2
 
 
 dev_dependencies:
