--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   firebase_storage: ^11.0.7
   cloud_firestore: ^4.2.0
   google_sign_in: ^5.4.2
+  auto_size_text: ^3.0.0
+  device_preview: ^1.1.0
 
 
 dev_dependencies:
