--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   google_sign_in: ^5.4.2
   auto_size_text: ^3.0.0
   device_preview: ^1.1.0
+  responsive_builder: ^0.4.3
 
 
 dev_dependencies:
