--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   device_preview: ^1.1.0
   responsive_builder: ^0.4.3
   image_picker: ^0.8.6
+  cached_network_image: ^3.2.3
 
 
 dev_dependencies:
